// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Header Deflaut 1`] = `
<header
  className="sc-gtssRu hbxSRf"
>
  <div
    className="sc-dlnjPT fekCVg"
  >
    <div
      className="sc-hKFyIo ubFgx"
    >
      <div
        className="sc-eCApGN koHhxw"
      >
        DMM History
      </div>
    </div>
    <div
      className="sc-hKFyIo ubFgx"
    >
      <input
        aria-label="keyword"
        className="sc-bdnylx gcQRBt"
        onChange={[Function]}
        placeholder="キーワードから探す"
        type="text"
        value=""
      />
    </div>
  </div>
</header>
`;

exports[`Storyshots HistoryList Deflaut 1`] = `
<div
  className="sc-jSFkmK iTopZR"
>
  <div
    className="sc-crzoUp mqnQU"
  >
    <div
      className="sc-bqGHjH bDSfqm"
    >
      <div
        className="sc-ksluoS fcdBmI"
      >
        <a
          className="sc-gKAblj UCmly"
          href=""
          rel="noopener noreferrer"
          target="_blank"
        >
          <button
            aria-label="削除する"
            className="sc-fujyUd hjizIl"
            onClick={[Function]}
          />
          <figure
            className="sc-iCoHVE cZDtuO"
          >
            <img
              alt="良い作品"
              src="https://dummyimage.com/200x300/000/fff"
            />
          </figure>
          <p
            className="sc-pNWxx hxWMiT"
          >
            良い作品
          </p>
          <div
            className="sc-jrsJCI hkaAor"
          >
            <span
              className="sc-kEqYlL dzyLPe"
            >
              ¥100〜¥300
            </span>
          </div>
        </a>
      </div>
      <div
        className="sc-ksluoS fcdBmI"
      >
        <a
          className="sc-gKAblj UCmly"
          href=""
          rel="noopener noreferrer"
          target="_blank"
        >
          <button
            aria-label="削除する"
            className="sc-fujyUd hjizIl"
            onClick={[Function]}
          />
          <figure
            className="sc-iCoHVE cZDtuO"
          >
            <img
              alt="良い作品"
              src="https://dummyimage.com/200x300/000/fff"
            />
          </figure>
          <p
            className="sc-pNWxx hxWMiT"
          >
            良い作品
          </p>
          <div
            className="sc-jrsJCI hkaAor"
          >
            <span
              className="sc-kEqYlL dzyLPe sale"
            >
              ¥50〜¥150
            </span>
            <span
              className="sc-iqAbSa fMqlqL"
            >
              50
              %OFF
            </span>
          </div>
        </a>
      </div>
      <div
        className="sc-ksluoS fcdBmI"
      >
        <a
          className="sc-gKAblj UCmly"
          href=""
          rel="noopener noreferrer"
          target="_blank"
        >
          <button
            aria-label="削除する"
            className="sc-fujyUd hjizIl"
            onClick={[Function]}
          />
          <figure
            className="sc-iCoHVE cZDtuO"
          >
            <img
              alt="良い作品"
              src="https://dummyimage.com/200x300/000/fff"
            />
          </figure>
          <p
            className="sc-pNWxx hxWMiT"
          >
            良い作品
          </p>
          <div
            className="sc-jrsJCI hkaAor"
          >
            <span
              className="sc-kEqYlL dzyLPe sale"
            >
              ¥50〜¥150
            </span>
            <span
              className="sc-iqAbSa fMqlqL"
            >
              50
              %OFF
            </span>
          </div>
        </a>
      </div>
      <div
        className="sc-ksluoS fcdBmI"
      >
        <a
          className="sc-gKAblj UCmly"
          href=""
          rel="noopener noreferrer"
          target="_blank"
        >
          <button
            aria-label="削除する"
            className="sc-fujyUd hjizIl"
            onClick={[Function]}
          />
          <figure
            className="sc-iCoHVE cZDtuO"
          >
            <img
              alt="良い作品"
              src="https://dummyimage.com/200x300/000/fff"
            />
          </figure>
          <p
            className="sc-pNWxx hxWMiT"
          >
            良い作品
          </p>
          <div
            className="sc-jrsJCI hkaAor"
          >
            <span
              className="sc-kEqYlL dzyLPe"
            >
              ¥100〜¥300
            </span>
          </div>
        </a>
      </div>
      <div
        className="sc-ksluoS fcdBmI"
      >
        <a
          className="sc-gKAblj UCmly"
          href=""
          rel="noopener noreferrer"
          target="_blank"
        >
          <button
            aria-label="削除する"
            className="sc-fujyUd hjizIl"
            onClick={[Function]}
          />
          <figure
            className="sc-iCoHVE cZDtuO"
          >
            <img
              alt="良い作品"
              src="https://dummyimage.com/200x300/000/fff"
            />
          </figure>
          <p
            className="sc-pNWxx hxWMiT"
          >
            良い作品
          </p>
          <div
            className="sc-jrsJCI hkaAor"
          >
            <span
              className="sc-kEqYlL dzyLPe"
            >
              ¥100〜¥300
            </span>
          </div>
        </a>
      </div>
      <div
        className="sc-ksluoS fcdBmI"
      >
        <a
          className="sc-gKAblj UCmly"
          href=""
          rel="noopener noreferrer"
          target="_blank"
        >
          <button
            aria-label="削除する"
            className="sc-fujyUd hjizIl"
            onClick={[Function]}
          />
          <figure
            className="sc-iCoHVE cZDtuO"
          >
            <img
              alt="良い作品"
              src="https://dummyimage.com/200x300/000/fff"
            />
          </figure>
          <p
            className="sc-pNWxx hxWMiT"
          >
            良い作品
          </p>
          <div
            className="sc-jrsJCI hkaAor"
          >
            <span
              className="sc-kEqYlL dzyLPe"
            >
              ¥100〜¥300
            </span>
          </div>
        </a>
      </div>
      <div
        className="sc-ksluoS fcdBmI"
      >
        <a
          className="sc-gKAblj UCmly"
          href=""
          rel="noopener noreferrer"
          target="_blank"
        >
          <button
            aria-label="削除する"
            className="sc-fujyUd hjizIl"
            onClick={[Function]}
          />
          <figure
            className="sc-iCoHVE cZDtuO"
          >
            <img
              alt="良い作品"
              src="https://dummyimage.com/200x300/000/fff"
            />
          </figure>
          <p
            className="sc-pNWxx hxWMiT"
          >
            良い作品
          </p>
          <div
            className="sc-jrsJCI hkaAor"
          >
            <span
              className="sc-kEqYlL dzyLPe"
            >
              ¥100〜¥300
            </span>
          </div>
        </a>
      </div>
      <div
        className="sc-ksluoS fcdBmI"
      >
        <a
          className="sc-gKAblj UCmly"
          href=""
          rel="noopener noreferrer"
          target="_blank"
        >
          <button
            aria-label="削除する"
            className="sc-fujyUd hjizIl"
            onClick={[Function]}
          />
          <figure
            className="sc-iCoHVE cZDtuO"
          >
            <img
              alt="良い作品"
              src="https://dummyimage.com/200x300/000/fff"
            />
          </figure>
          <p
            className="sc-pNWxx hxWMiT"
          >
            良い作品
          </p>
          <div
            className="sc-jrsJCI hkaAor"
          >
            <span
              className="sc-kEqYlL dzyLPe"
            >
              ¥100〜¥300
            </span>
          </div>
        </a>
      </div>
      <div
        className="sc-ksluoS fcdBmI"
      >
        <a
          className="sc-gKAblj UCmly"
          href=""
          rel="noopener noreferrer"
          target="_blank"
        >
          <button
            aria-label="削除する"
            className="sc-fujyUd hjizIl"
            onClick={[Function]}
          />
          <figure
            className="sc-iCoHVE cZDtuO"
          >
            <img
              alt="良い作品"
              src="https://dummyimage.com/200x300/000/fff"
            />
          </figure>
          <p
            className="sc-pNWxx hxWMiT"
          >
            良い作品
          </p>
          <div
            className="sc-jrsJCI hkaAor"
          >
            <span
              className="sc-kEqYlL dzyLPe"
            >
              ¥100〜¥300
            </span>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots HistoryList Not Found 1`] = `
<div
  className="sc-jSFkmK iTopZR"
>
  <div
    className="sc-crzoUp sc-dIsAE mqnQU dRbaOy"
  >
    <p>
      絞り込み条件に一致する商品は見つかりませんでした。
    </p>
  </div>
</div>
`;

exports[`Storyshots HistoryListItem Deflaut 1`] = `
<div
  className="sc-jSFkmK iTopZR"
>
  <div
    className="sc-crzoUp mqnQU"
  >
    <div
      className="sc-bqGHjH bDSfqm"
    >
      <div
        className="sc-ksluoS fcdBmI"
      >
        <a
          className="sc-gKAblj UCmly"
          href=""
          rel="noopener noreferrer"
          target="_blank"
        >
          <button
            aria-label="削除する"
            className="sc-fujyUd hjizIl"
            onClick={[Function]}
          />
          <figure
            className="sc-iCoHVE cZDtuO"
          >
            <img
              alt="良い作品"
              src="https://dummyimage.com/200x300/000/fff"
            />
          </figure>
          <p
            className="sc-pNWxx hxWMiT"
          >
            良い作品
          </p>
          <div
            className="sc-jrsJCI hkaAor"
          >
            <span
              className="sc-kEqYlL dzyLPe"
            >
              ¥100〜¥300
            </span>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots HistoryListItem Sale 1`] = `
<div
  className="sc-jSFkmK iTopZR"
>
  <div
    className="sc-crzoUp mqnQU"
  >
    <div
      className="sc-bqGHjH bDSfqm"
    >
      <div
        className="sc-ksluoS fcdBmI"
      >
        <a
          className="sc-gKAblj UCmly"
          href=""
          rel="noopener noreferrer"
          target="_blank"
        >
          <button
            aria-label="削除する"
            className="sc-fujyUd hjizIl"
            onClick={[Function]}
          />
          <figure
            className="sc-iCoHVE cZDtuO"
          >
            <img
              alt="すごい作品"
              src="https://dummyimage.com/200x300/000/fff"
            />
          </figure>
          <p
            className="sc-pNWxx hxWMiT"
          >
            すごい作品
          </p>
          <div
            className="sc-jrsJCI hkaAor"
          >
            <span
              className="sc-kEqYlL dzyLPe sale"
            >
              ¥50〜¥150
            </span>
            <span
              className="sc-iqAbSa fMqlqL"
            >
              50
              %OFF
            </span>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input Deflaut 1`] = `
<input
  aria-label="keyword"
  className="sc-bdnylx gcQRBt"
  onChange={[Function]}
  placeholder="キーワードから探す"
  type="text"
  value=""
/>
`;

exports[`Storyshots SearchResultStats Deflaut 1`] = `
<div
  className="sc-hBMVcZ dRmHHn"
>
  <span>
    すごい作品 100件
  </span>
</div>
`;

exports[`Storyshots SearchResultStats Not Exists 1`] = `
<div
  className="sc-hBMVcZ dRmHHn"
>
  <span>
    0件
  </span>
</div>
`;
